allso/backend/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: monitor
spec:
  type: ClusterIP
  selector:
    workload.user.cattle.io/workloadselector: backend-monitor
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
    name: http
