allso/backend/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: allso
  annotations:
    nginx.org/websocket-services: "backend"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://az.allso.juxtagene.com,https://localhost:8080"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization"
    cert-manager.k8s.io/cluster-issuer: letsencrypt-prod-allso-backend
    cert-manager.io/acme-challenge-type: http01

spec:
  rules:
  - host: az.allso-backend.juxtagene.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  tls:
  - hosts:
    - az.allso-backend.juxtagene.com
    secretName: az-allso-backend-juxtagene-com-tls
